--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
           </h2>
           <p class="description">
             I am a final year student of the Master of Statistics (M.Stat) program at
-             the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata. I am fortunate to be advised by
-              <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a> and <a href="https://soumendu041.gitlab.io/" target="_blank">Soumendu Sundar Mukherjee</a> on my master's dissertation.
-              
+             the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata. 
                During the summer of 2024, I was a Visiting Research Scholar in the <a href="https://www.cmu.edu/dietrich/statistics-datascience/index.html"target="_blank">Department of Statistics 
                and Data Science</a> at Carnegie Mellon University, where I was mentored by 
                <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>. 
@@ -126,6 +124,15 @@
             <p>Link: <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
             </div>
             </li>
+
+            <li>
+              <div class="paper">
+              <p><strong>Post-detection inference for sequential changepoint localization
+              </strong></p>
+              <p>Aytijhya Saha and Aaditya Ramdas</p>
+              <p>Link: <a href="https://arxiv.org/abs/2502.06096" target="_blank">arXiv</a></p>
+              </div>
+              </li>
            
         </ol>
       </div>
