--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 Home</a></li>
             <li><a href="research.html" >
                   Research</a></li>
-            <!--<li><a href="CV_Aytijhya.pdf" target="_blank" >
-                <img src="cv-icon.png" alt="Curriculum Vitae" class="nav-icon">Curriculum Vitae</a></li>-->
+            <li><a href="CV_Aytijhya.pdf" target="_blank" >
+                <img src="cv-icon.png" alt="CV" class="nav-icon">CV</a></li>
             <li><a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
                 <img src="scholar-icon.png" alt="Google Scholar" class="nav-icon">Google Scholar</a></li>
             <li><a href="https://github.com/Aytijhya" target="_blank">
