--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
         </div>
       </div>
 
+      <div class="papers" style="margin-bottom: 80px;">
+        <h2>News</h2>
+        <ul>
+            <li>
+                I am joining the <a href="https://www.eecs.mit.edu/">Department of Electrical Engineering and Computer Science (EECS) </a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a> 
+                starting from Fall 2025 as a PhD student, being a fortunate recipient of the <strong>Hewlett Packard Fellowship</strong>.
+            </li>
+            <li>
+                I am attending the <a href="https://workshops.birs.ca/events/25w5482"> BIRS workshop on game-theoretic statistical inference </a> at <strong>Chennai Mathematical Institute</strong> (Jun 29 - Jul 3, 2025).
+            </li>
+        </ul>
+    </div>
+    
+
+
       
       <div class="papers">
         <h1>Published (or accepted) papers/articles</h1>
@@ -142,6 +157,12 @@
         <div>
         <ul>
             <li>
+            Awarded <strong>Hewlett Packard Fellowship</strong> by <a href="https://www.mit.edu/">Massachusetts Institute of Technology </a> (2025)
+            </li>
+            <li>
+              Awarded <strong>EDGE Doctoral Fellowship</strong> by <a href="https://www.stanford.edu/">Stanford University</a>  (2025) [Declined]
+              </li>
+            <li>
             <div class="paper">
             <p><strong>Mrs. M.R. Iyer Memorial Gold Medal</strong> (At the 58th Convocation of <a href="https://www.isical.ac.in/" target="_blank">ISI</a>) for the <strong> first position </strong> in the B.Stat program (2020-2023) at ISI</p>
             </div>
@@ -166,7 +187,7 @@
 
             <li>
             <div class="paper">
-            <p><strong>Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship</strong>: 2020 - Present</p>
+            <p><strong>Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship</strong>: 2020 - 2025</p>
             </div>
             </li>
 
