--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="paper">
             <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p><i><font color="rgb(0.2, 0.28, 0.87)">Journal of the American Statistical Association (JASA)</font>, 2025.To Appear</i></p>
+            <p><i><font color="rgb(0.2, 0.28, 0.87)">Journal of the American Statistical Association (JASA)</font>, 2025.</i></p>
             <p>Links: <a href="https://doi.org/10.1080/01621459.2024.2402957" target="_blank">Journal</a> | <a href="https://github.com/Aytijhya/Discussion-of-Poisson-FOCuS-GRB-Detection" target="_blank">Code</a></p>
             </div>
             </li>
