--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
         <ul>
             <li>
             <div class="paper">
-            <h3><strong> <a href="https://arxiv.org/abs/2408.14015" target="_blank">Post-detection inference for sequential changepoint localization
+            <h3><strong> <a href="https://arxiv.org/abs/2502.06096" target="_blank">Post-detection inference for sequential changepoint localization
             </a></strong></h3>
             <p><strong>Brief description:</strong> This paper addresses a fundamental but largely unexplored challenge in sequential changepoint analysis: conducting inference following a detected change.
                We study the problem of localizing the changepoint using only the data observed up to a data-dependent stopping time at which a sequential detection algorithm detects a change.</p>
@@ -71,7 +71,7 @@
               </li>
             <li>
             <div class="paper">
-            <h3><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong> [JASA, 2025]</h3>
+            <h3><strong><a href="https://doi.org/10.1080/01621459.2024.2402957" target="_blank">Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</a></strong> [JASA, 2025]</h3>
             <p><strong>Brief description:</strong> In this discussion article, we demonstrate that a specific variant of the <a href="https://doi.org/10.51387/23-NEJSDS51">e-detector</a> offers a promising 
               alternative to the <a href="https://doi.org/10.1080/01621459.2023.2235059">Poisson-FOCuS</a> algorithm for online gamma-ray burst detection, providing a notable reduction
             in computation time while maintaining comparable detection efficiency.</p>
