--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
               <p>Link: <a href="https://arxiv.org/abs/2502.06096" target="_blank">arXiv</a></p>
               </div>
               </li>
+
+               <li>
+              <div class="paper">
+              <p><strong>Density estimation with atoms, and functional
+estimation for mixed discrete-continuous data
+              </strong></p>
+              <p>Aytijhya Saha and Aaditya Ramdas</p>
+              <p>Working Paper</p>
+              </div>
+              </li>
            
         </ol>
       </div>
