--- a/research.html
+++ b/research.html
@@ -23,6 +23,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="research.html" >
                 Research/Talks</a></li>
+          <li><a href="misc.html">Miscellaneous</a></li>
           <li><a href="CV_Aytijhya.pdf" target="_blank" >CV</a></li>
                              
         </ul>
