--- a/misc.html
+++ b/misc.html
@@ -33,7 +33,7 @@
     <section class="section">
     <div class="section__description">
     <div class="content">
-    <section class="pronunciation">
+    <section class="description">
       <h2>🔊 How to Pronounce My Name</h2>
     My first name, “Aytijhya,” is a Bengali word — <strong>ঐতিহ্য</strong> — which means “heritage” or “tradition.”
      It’s spelled “Aytijhya” in English, but pronounced more like <strong>“Oi-teej-jho.”</strong>   </section>
