--- a/misc.html
+++ b/misc.html
@@ -57,7 +57,7 @@
 
 <div class="gallery-grid">
   <div class="gallery-item">
-    <img src="images/imotc.png" alt="Mountain View" />
+    <img src="images/imotc.png" alt="Mountain View" width="100" height="100"/>
     <div class="caption">IMOTC 2019</div>
   </div>
   <div class="gallery-item">
