--- a/misc.html
+++ b/misc.html
@@ -57,32 +57,32 @@
 
 <div class="gallery-grid">
   <div class="gallery-item">
-    <img src="images/imotc.png" alt="Mountain View" width="300"/>
-    <div class="caption">IMOTC 2019</div>
+    <img src="images/imotc.png" alt="Mountain View" width="300" height="340"/>
+    <div class="caption">International Mathematical Olympiad Training Camp (IMOTC), Mumbai, 2019</div>
   </div>
   <div class="gallery-item">
-    <img src="images/bdsi.png" alt="Lake Reflection" />
+    <img src="images/bdsi.png" alt="Lake Reflection" height="340" />
     <div class="caption">Big Data Summer Institute, University of Michigan, 2023</div>
   </div>
   </div>
   <div class="gallery-grid">
   <div class="gallery-item">
-    <img src="images/aadi-grp.png" alt="City Skyline" />
-    <div class="caption">With Aaditya Ramdas and his group, Pittsburgh, Summer 2024</div>
+    <img src="images/aadi-grp.png" alt="City Skyline" height="340" />
+    <div class="caption">With Aaditya Ramdas and group, Pittsburgh, 2024</div>
   </div>
   <div class="gallery-item">
-    <img src="images/hastie.png" alt="Forest Trail" />
+    <img src="images/hastie.png" alt="Forest Trail" height="340" />
     <div class="caption">Receiving Gold medals from Trevor Hastie at ISI Convocation, 2023</div>
   </div>
   </div>
    <div class="gallery-grid">
   <div class="gallery-item">
     <img src="images/mstatbatch.png" alt="Desert Dunes" />
-    <div class="caption">Thanksgiving celebration, M.Stat' 25</div>
+    <div class="caption">Thanksgiving celebration, M.Stat Batch of 2025, ISI Hostel</div>
   </div>
   <div class="gallery-item">
-    <img src="images/tulip.png" alt="Ocean Waves" />
-    <div class="caption">Tulip Gargen, April 2025</div>
+    <img src="images/tulip.png" alt="Ocean Waves" height="290"/>
+    <div class="caption">Tulip Gargen, Srinagar, March 2025</div>
   </div>
   </div>
 </div>
