--- a/misc.html
+++ b/misc.html
@@ -77,7 +77,7 @@
   </div>
    <div class="gallery-grid">
   <div class="gallery-item">
-    <img src="images/mstatbatch.png" alt="Desert Dunes" />
+    <img src="images/mstatbatch.png" alt="Desert Dunes"  height="290" />
     <div class="caption">Thanksgiving celebration, M.Stat Batch of 2025, ISI Hostel</div>
   </div>
   <div class="gallery-item">
