--- a/misc.html
+++ b/misc.html
@@ -94,6 +94,9 @@
     </div>
 
   </div>
-  
+   <script src="scripts.js"></script>
+  <footer>
+    <p><center>&copy; 2024 Aytijhya Saha</center></p>
+  </footer>
 </body>
 </html>
