--- a/misc.html
+++ b/misc.html
@@ -44,10 +44,11 @@
       Outside of research, I love immersing myself in activities:
     <ul>
     <li>🧶 <strong>Swimming</strong> — I love being in the water and try to swim regularly for both relaxation and fitness.</li>
-     <li>🎵 <strong>Music</strong> — I have a deep appreciation for melodious music - whether it’s classical or contemporary.</li>
-    <li>🎲 <strong>Board Games</strong> — I enjoy strategic games like Chess, Monopoly, and Catan, especially in good company.</li>
+    <li>🎵 <strong>Music</strong> — I have a deep appreciation for melodious music - whether it’s classical or contemporary.</li>
+    <li>🎲 <strong>Board Games</strong> — I enjoy strategic games like Chess, Monopoly, and Catan.</li>
     <li>📚 <strong>Reading</strong> — I particularly enjoy fiction and science writing.</li>
-   
+    <li>🎒 <strong>Traveling</strong> — I love traveling and exploring new places, food, and cultures across the world.</li>
+
      </ul>
     </section>
 
