--- a/research.html
+++ b/research.html
@@ -36,8 +36,8 @@
             I have worked on areas including robust statistics, online/sequential learning, game-theoretic statistics,
             high-dimensional inference, change-point detection and localization, group-feature selection,
         classification algorithms, 
-        multi-armed bandits,
-        neural networks, etc. My research works are published (or under review) in the top proceedings in ML/AI (AISTATS, ECML-PKDD) and the top journals in ML, statistics and related areas (Neurocomputing, JASA, IEEE). 
+        nonparametric inference,
+        neural networks, etc. Currently, I am also exploring causal and conformal inference. My research works are published (or under review) in the top proceedings in ML/AI (AISTATS, ECML-PKDD) and the top journals in ML, statistics and related areas (Neurocomputing, JASA, IEEE). 
         Details of my publications and preprints can be found in my <a href="index.html">homepage</a> and <a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
           google scholar</a> profile.
       </p>
