--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
   </head>
   <body>
  
-<nav class="navbar">
-  <div class="nav-container">
-    <h1 class="title">Aytijhya Saha</h1>
+<nav>
+      <h1 class="title"><font color="white">Aytijhya Saha</font></h1>
+        <ul class="nav-links" id="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="research.html" >
+                Research/Talks</a></li>
+          <li><a href="misc.html">Miscellaneous</a></li>
+          <li><a href="CV_Aytijhya.pdf" target="_blank" >CV</a></li>
+                             
+        </ul>
+    </nav>
 
-    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-    <label for="menu-toggle" class="menu-icon">&#9776;</label>
-
-    <ul class="nav-links">
-      <li><a href="">Home</a></li>
-      <li><a href="research.html">Research/Talks</a></li>
-      <li><a href="misc.html">Miscellaneous</a></li>
-      <li><a href="CV_Aytijhya.pdf" target="_blank">CV</a></li>
-    </ul>
-  </div>
-</nav>
 
     <div id="home" class="tab">
     <section class="section">
