--- a/research.html
+++ b/research.html
@@ -115,9 +115,10 @@
         <h1>Talks</h1>
         <div>
         <ul>
+          <li><strong>(3rd Workshop on Game-theoretic Statistics and Sequential, Anytime-Valid Inference, 2025)</strong> Huber-Robust Likelihood Ratio Tests for Composite Nulls and Alternatives <a href="https://stat.cmu.edu/~aramdas/BIRS/saha.pdf"> [Slides]</a></li>
           <li> <strong>(International Seminar on Selective Inference, 2025)</strong> Post-detection inference for sequential changepoint localization <a href="https://drive.google.com/file/d/1acmWDecJydgzKkCYTvu40VJSughZ4J2m/view?usp=drive_link">[Talk Recording]</a></li>
           <li><strong>(Carnegie Mellon University, 2024)</strong> Huber-Robust Anytime-Valid Sequential Probability Ratio Test <a href="https://drive.google.com/file/d/1njVTNK3-_rNBkYXbt_nmMYPbGCHbF4C4/view?usp=sharing"> [Slides]</a></li>
-           <li><strong>(D. Basu Memorial Award Presentation, ISI Kolkata, 2023)</strong> Navigating the Challenges of High-dimensional
+          <li><strong>(D. Basu Memorial Award Presentation, ISI Kolkata, 2023)</strong> Navigating the Challenges of High-dimensional
 Low Sample Size Data: A Two-sample Test and a
 Novel Classification Approach <a href="https://drive.google.com/file/d/1YkPT5Zy8seoadbKwmlDI3mL2-QMafijZ/view?usp=sharing"> [Slides]</a></li>
         </ul>
