--- a/research.html
+++ b/research.html
@@ -37,8 +37,7 @@
             high-dimensional inference, change-point detection and localization, group-feature selection,
         classification algorithms, 
         nonparametric inference,
-        neural networks, etc. Currently, I am also exploring causal and conformal inference. My research works are published (or under review) in the top proceedings in ML/AI (AISTATS, ECML-PKDD) and the top journals in ML, statistics and related areas (Neurocomputing, JASA, IEEE). 
-        Details of my publications and preprints can be found in my <a href="index.html">homepage</a> and <a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
+        neural networks, etc. Currently, I am also exploring causal and conformal inference. Details of my publications and preprints can also be found in my <a href="index.html">homepage</a> and <a href="https://scholar.google.com/citations?user=fKv7P-wAAAAJ&hl=en" target="_blank">
           google scholar</a> profile.
       </p>
         </div>
@@ -48,12 +47,22 @@
       
       <div class="papers">
         <ul>
+          <li>
+            <div class="paper">
+            <h3><strong> <a href="https://arxiv.org/abs/2508.01706" target="_blank">Density estimation with atoms, and functional estimation for mixed discrete-continuous data
+            </a></strong>[Under Review, TAS]</h3>
+            <p><strong>Brief description:</strong> Classical density (or density-functional) estimation assumes an underlying distribution absolutely continuous w.r.t. Lebesgue measure,
+               leading to poor performance for data distributions with both continuous and discrete components. We show that a simple modification of existing nonparametric methods removes
+                this assumption while preserving theoretical guarantees and improving empirical results.</p>
+            </div>
+            </li>
             <li>
             <div class="paper">
             <h3><strong> <a href="https://arxiv.org/abs/2502.06096" target="_blank">Post-detection inference for sequential changepoint localization
-            </a></strong></h3>
-            <p><strong>Brief description:</strong> This paper addresses a fundamental but largely unexplored challenge in sequential changepoint analysis: conducting inference following a detected change.
-               We study the problem of localizing the changepoint using only the data observed up to a data-dependent stopping time at which a sequential detection algorithm detects a change.</p>
+            </a></strong>[Under Review, JRSSB]</h3>
+            <p><strong>Brief description:</strong> We address a fundamental but largely unexplored challenge addresses a fundamental yet underexplored question in sequential changepoint analysis: how can we perform valid inference on the changepoint, once a (potentially blackbox or heuristic) sequential detection algorithm has declared that a change has occurred? 
+              Specifically, we construct confidence sets for the (unknown) changepoint using only the data available up to a data-dependent stopping time, at which an arbitrary sequential detection algorithm stops and signals a change.
+               To the best of our knowledge, our work provides the first general methodology for post-detection changepoint localization that is both assumption-lean and agnostic to the change detection method.</p>
             </div>
             </li>
             <li>
