--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
            Previously, I completed my Bachelor of Statistics (B.Stat) in 2023 and Master of Statistics (M.Stat) in 2025 at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata.
            My Master's Dissertation at ISI, advised by Prof. <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>  (CMU), explores post-detection inference for sequential changepoint localization.
             <br>
-            I have been fortunate to participate in diverse research programs and summer visits, including the <a href="https://www.cmu.edu/dietrich/statistics-datascience/index.html" target="_blank">Department of Statistics 
-and Data Science</a> at <a href="https://www.cmu.edu" target="_blank">Carnegie Mellon University</a> (Summer 2024), the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a> at the School of Public Health, <a href="https://umich.edu/" target="_blank">University of Michigan</a> (Summer 2023), 
-and the <a href="https://math.iisc.ac.in/">Department of Mathematics</a> at the <a href="https://iisc.ac.in/" target="_blank">Indian Institute of Science (IISc)</a>, Bangalore (Summer 2022).
+            I have been fortunate to participate in research internships/visits at the <a href="https://www.cmu.edu/dietrich/statistics-datascience/index.html" target="_blank">Department of Statistics 
+and Data Science</a>, <a href="https://www.cmu.edu" target="_blank">Carnegie Mellon University</a> (Summer 2024), at the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a> , School of Public Health, <a href="https://umich.edu/" target="_blank">University of Michigan</a> (Summer 2023), 
+and at the <a href="https://math.iisc.ac.in/">Department of Mathematics</a>, <a href="https://iisc.ac.in/" target="_blank">Indian Institute of Science</a>, Bangalore (Summer 2022).
   
                
           </p>
