--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
           <p class="description">
             I am a first-year PhD student in the <a href="https://www.eecs.mit.edu/">Department of Electrical Engineering and Computer Science (EECS) </a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, 
             supported by the Hewlett Packard Fellowship.
-            I am also affiliated with the <a href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> at MIT.
-             My research interests span a broad spectrum within statistics and machine learning. 
-             I am passionate about working on algorithms, theory, and applications in these fields that address practical challenges.
+            I am also affiliated with the <a href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> at MIT, where I am working with <a href="https://devavrat.mit.edu/" target="_blank">Devavrat Shah</a> and <a href="https://stephenbates19.github.io/index.html" target="_blank">Stephen Bates</a>
             
           <br>
            Previously, I completed my Bachelor of Statistics (B.Stat) in 2023 and Master of Statistics (M.Stat) in 2025 at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata.
-           My Master's Dissertation at ISI, advised by Prof. <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>  (CMU), explores post-detection inference for sequential changepoint localization.
+           My Master's Dissertation at ISI, advised by <a href="https://www.stat.cmu.edu/~aramdas/" target="_blank">Aaditya Ramdas</a>  (CMU), explores post-detection inference for sequential changepoint localization.
             <br>
             I have been fortunate to participate in research internships/visits at the <a href="https://www.cmu.edu/dietrich/statistics-datascience/index.html" target="_blank">Department of Statistics 
 and Data Science</a>, <a href="https://www.cmu.edu" target="_blank">Carnegie Mellon University</a> (Summer 2024), at the <a href="https://sph.umich.edu/bdsi/" target="_blank">Big Data Summer Institute</a> , School of Public Health, <a href="https://umich.edu/" target="_blank">University of Michigan</a> (Summer 2023), 
