--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p class="description">
             I am a first-year PhD student in the <a href="https://www.eecs.mit.edu/">Department of Electrical Engineering and Computer Science (EECS) </a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>, 
             supported by the Hewlett Packard Fellowship.
-            I am also affiliated with the <a href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> at MIT, where I am working with <a href="https://devavrat.mit.edu/" target="_blank">Devavrat Shah</a> and <a href="https://stephenbates19.github.io/index.html" target="_blank">Stephen Bates</a>
+            I am also affiliated with the <a href="https://lids.mit.edu/">Laboratory for Information and Decision Systems (LIDS)</a> at MIT, where I am working with <a href="https://devavrat.mit.edu/" target="_blank">Devavrat Shah</a> and <a href="https://stephenbates19.github.io/index.html" target="_blank">Stephen Bates</a>.
             
           <br>
            Previously, I completed my Bachelor of Statistics (B.Stat) in 2023 and Master of Statistics (M.Stat) in 2025 at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute (ISI)</a>, Kolkata.
