--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
           <li>
             <div class="paper">
             <h3><strong> <a href="https://arxiv.org/abs/2508.01706" target="_blank">Density estimation with atoms, and functional estimation for mixed discrete-continuous data
-            </a></strong>[Under Review, TAS]</h3>
+            </a></strong></h3>
             <p><strong>Brief description:</strong> Classical density (or density-functional) estimation assumes an underlying distribution absolutely continuous w.r.t. Lebesgue measure,
                leading to poor performance for data distributions with both continuous and discrete components. We show that a simple modification of existing nonparametric methods removes
                 this assumption while preserving theoretical guarantees and improving empirical results.</p>
@@ -59,7 +59,7 @@
             <li>
             <div class="paper">
             <h3><strong> <a href="https://arxiv.org/abs/2502.06096" target="_blank">Post-detection inference for sequential changepoint localization
-            </a></strong>[Under Review, JRSSB]</h3>
+            </a></strong></h3>
             <p><strong>Brief description:</strong> We address a fundamental but largely unexplored challenge addresses a fundamental yet underexplored question in sequential changepoint analysis: how can we perform valid inference on the changepoint, once a (potentially blackbox or heuristic) sequential detection algorithm has declared that a change has occurred? 
               Specifically, we construct confidence sets for the (unknown) changepoint using only the data available up to a data-dependent stopping time, at which an arbitrary sequential detection algorithm stops and signals a change.
                To the best of our knowledge, our work provides the first general methodology for post-detection changepoint localization that is both assumption-lean and agnostic to the change detection method.</p>
@@ -67,11 +67,16 @@
             </li>
             <li>
               <div class="paper">
-              <h3><strong> <a href="https://arxiv.org/abs/2408.14015" target="_blank">Robust likelihood ratio tests for composite nulls and alternatives</a></strong> [Under Review, IEEE Trans. on Information Theory]</h3>
-              <p><strong>Brief description:</strong> We first modify <a href="https://doi.org/10.1214/aoms/1177699803">Huber's robust SPRT</a> for simple nulls and alternatives to instead employ a test supermartingale. 
-                 The martingale tools allow us to generalize the usual Huber contamination model to show that our sequential test retains type-I error validity even under sequentially adaptive contaminations under the null. 
-                  With this building block in place, we extend our approach to handle both composite nulls and composite alternative hypotheses, a task which has not been undertaken earlier, and utilizes te idea of <a href="https://arxiv.org/abs/2402.18810">reverse information projection</a>. 
-                  In all cases, we analyze the growth rate under the alternative, which asymptotically converges the optimal non-robust growth rate.</p>
+              <h3><strong> <a href="https://arxiv.org/abs/2408.14015" target="_blank">Huber-robust likelihood ratio tests for composite nulls and alternatives</a></strong> [Under Review, IEEE Trans. on Info. Theory]</h3>
+              <p><strong>Brief description:</strong> We prove a general result that least favourable distribution (LFD) pairs, when they exist,
+yield optimal e-values for testing arbitrary composite nulls against composite alternatives.
+Then we show the following composition property of least favourable distributions: if an LFD pair exists for some composite null and alternative, then
+the LFDs of Huber’s ϵ-contamination or total variation (TV) neighborhoods around that
+specific pair form the LFD pair for the corresponding robustified composite
+hypotheses. Furthermore, where LFDs do not exist, we develop new e-value based robust composite
+tests for general settings, that are inherently sequential, but
+they are new even for fixed sample sizes, giving type-I error control without any regularity
+conditions. 
             </div>
               </li>
             <li>
