--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@ estimation for mixed discrete-continuous data
         <ul>
             <li>
               <div class="papers">
-              <p>Awarded <strong>Prasanta Chandra Mahalanobis Gold Medal</strong> as the <strong>most outstanding</strong> student in the M.Stat. programme (2023 - 2025) at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute</a></p>
+              <p> <strong>Prasanta Chandra Mahalanobis Gold Medal</strong> as the <strong>most outstanding</strong> student in the M.Stat. programme (2023 - 2025) at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute</a></p>
               </div>
             </li>
             <li>
               <div class="papers">
-              <p>Awarded <strong>Hewlett Packard Fellowship</strong> by <a href="https://www.mit.edu/">Massachusetts Institute of Technology </a> (2025)</p>
+              <p> <strong>Hewlett Packard Fellowship</strong> by <a href="https://www.mit.edu/">Massachusetts Institute of Technology </a> (2025)</p>
               </div>
             </li>
             <li>
              <div class="papers">
-             <p> Awarded <strong>EDGE Doctoral Fellowship</strong> by <a href="https://www.stanford.edu/">Stanford University</a>  (2025) [Declined]</p>
+             <p>  <strong>EDGE Doctoral Fellowship</strong> by <a href="https://www.stanford.edu/">Stanford University</a>  (2025) [Declined]</p>
              </div>  
             </li>
               
