--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ estimation for mixed discrete-continuous data
         <ul>
             <li>
               <div class="papers">
-              <p> <strong>Prasanta Chandra Mahalanobis Gold Medal</strong> as the <strong>most outstanding</strong> student in the M.Stat. programme (2023 - 2025) at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute</a></p>
+              <p> <strong>Prasanta Chandra Mahalanobis Gold Medal</strong> conferred upon the <strong>most outstanding</strong> student in the M.Stat. programme (2023 - 2025) at the <a href="https://www.isical.ac.in/" target="_blank">Indian Statistical Institute</a></p>
               </div>
             </li>
             <li>
