--- a/research.html
+++ b/research.html
@@ -129,8 +129,10 @@ conditions.
         <h1>Talks</h1>
         <div>
         <ul>
+          <li><strong>(PCM Gold Medal Presentation, ISI Kolkata, 2025) </strong>  [Virtual]
+ Testing exchangeability by pairwise betting <a href="https://drive.google.com/file/d/1PAtu_UNvFgQlfEVgZK-J3fLNvW04ciIG/view?usp=sharing">[slides]</a></li>
           <li><strong>(3rd Workshop on Game-theoretic Statistics and Sequential, Anytime-Valid Inference, 2025)</strong> Huber-Robust Likelihood Ratio Tests for Composite Nulls and Alternatives <a href="https://stat.cmu.edu/~aramdas/BIRS/saha.pdf"> [Slides]</a></li>
-          <li> <strong>(International Seminar on Selective Inference, 2025)</strong> Post-detection inference for sequential changepoint localization <a href="https://drive.google.com/file/d/1acmWDecJydgzKkCYTvu40VJSughZ4J2m/view?usp=drive_link">[Talk Recording]</a></li>
+          <li> <strong>(International Seminar on Selective Inference, 2025)</strong>  [Virtual] Post-detection inference for sequential changepoint localization <a href="https://drive.google.com/file/d/1acmWDecJydgzKkCYTvu40VJSughZ4J2m/view?usp=drive_link">[Talk Recording]</a></li>
           <li><strong>(Carnegie Mellon University, 2024)</strong> Huber-Robust Anytime-Valid Sequential Probability Ratio Test <a href="https://drive.google.com/file/d/1njVTNK3-_rNBkYXbt_nmMYPbGCHbF4C4/view?usp=sharing"> [Slides]</a></li>
           <li><strong>(D. Basu Memorial Award Presentation, ISI Kolkata, 2023)</strong> Navigating the Challenges of High-dimensional
 Low Sample Size Data: A Two-sample Test and a
