--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ and at the <a href="https://math.iisc.ac.in/">Department of Mathematics</a>, <a 
         <h1>📚 Published (or accepted) papers/articles</h1>
         <ol>
         <h2>In Journals</h2>
+             <li>
+            <div class="paper">
+            <p><strong>Huber-robust likelihood ratio tests for composite nulls and alternatives</strong></p>
+            <p>Aytijhya Saha and Aaditya Ramdas</p>
+            <p> <font color="rgb(0.2, 0.28, 0.87)"><i>IEEE Transactions on Information Theory</i></font>, 2026.</p>
+            <p>Link: <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
+            </div>
+            </li>
             <li>
             <div class="paper">
             <p><strong>Saha and Ramdas' discussion of "Poisson-focus" by Ward, Dilillo, Eckley and Fearnhead</strong></p>
@@ -127,14 +135,7 @@ and at the <a href="https://math.iisc.ac.in/">Department of Mathematics</a>, <a 
       <div class="papers">
         <h1>📝 Preprints / Submitted papers</h1>
         <ol>
-            <li>
-            <div class="paper">
-            <p><strong>Robust likelihood ratio tests for composite nulls and alternatives</strong></p>
-            <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p>Submitted to the <font color="rgb(0.2, 0.28, 0.87)"><i>IEEE Transactions on Information Theory</i></font></p>
-            <p>Link: <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
-            </div>
-            </li>
+           
 
             <li>
               <div class="paper">
