--- a/research.html
+++ b/research.html
@@ -67,7 +67,7 @@
             </li>
             <li>
               <div class="paper">
-              <h3><strong> <a href="https://arxiv.org/abs/2408.14015" target="_blank">Huber-robust likelihood ratio tests for composite nulls and alternatives</a></strong> [Under Review, IEEE Trans. on Info. Theory]</h3>
+              <h3><strong> <a href="https://arxiv.org/abs/2408.14015" target="_blank">Huber-robust likelihood ratio tests for composite nulls and alternatives</a></strong> [IEEE Trans. on Info. Theory, 2026]</h3>
               <p><strong>Brief description:</strong> We prove a general result that least favourable distribution (LFD) pairs, when they exist,
 yield optimal e-values for testing arbitrary composite nulls against composite alternatives.
 Then we show the following composition property of least favourable distributions: if an LFD pair exists for some composite null and alternative, then
