--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="research.html" >
                 Research/Talks</a></li>
           <li><a href="misc.html">Miscellaneous</a></li>
-          <li><a href="CV___Aytijhya.pdf" target="_blank" >CV</a></li>
+          <li><a href="CV_Aytijhya.pdf" target="_blank" >CV</a></li>
                              
         </ul>
     </nav>
