--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ and at the <a href="https://math.iisc.ac.in/">Department of Mathematics</a>, <a 
             <div class="paper">
             <p><strong>Huber-robust likelihood ratio tests for composite nulls and alternatives</strong></p>
             <p>Aytijhya Saha and Aaditya Ramdas</p>
-            <p> <font color="rgb(0.2, 0.28, 0.87)"><i>IEEE Transactions on Information Theory</i></font>, 2026.</p>
-            <p>Link: <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
+            <p> <font color="rgb(0.2, 0.28, 0.87)"><i>IEEE Transactions on Information Theory</i></font>, 2025.</p>
+            <p>Link: <a href="https://ieeexplore.ieee.org/document/11283062" target="_blank">Journal</a> | <a href="https://arxiv.org/abs/2408.14015" target="_blank">arXiv</a></p>
             </div>
             </li>
             <li>
